--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1672,13 +1672,13 @@ node_types:
         default: false
     artifacts:
       - docker_agent_role:
-          file: indigo-dc.docker,deep-dev
+          file: indigo-dc.docker
           type: tosca.artifacts.AnsibleGalaxy.role
       - consul_agent_role:
-          file: indigo-dc.consul,deep-dev
+          file: indigo-dc.consul
           type: tosca.artifacts.AnsibleGalaxy.role
       - mesos_agent_role:
-          file: indigo-dc.mesos,deep-dev
+          file: indigo-dc.mesos
           type: tosca.artifacts.AnsibleGalaxy.role
       - nfs_role:
           file: indigo-dc.nfs
@@ -1820,13 +1820,13 @@ node_types:
         default: true
     artifacts:
       - docker_agent_role:
-          file: indigo-dc.docker,deep-dev
+          file: indigo-dc.docker
           type: tosca.artifacts.AnsibleGalaxy.role
       - consul_agent_role:
-          file: indigo-dc.consul,deep-dev
+          file: indigo-dc.consul
           type: tosca.artifacts.AnsibleGalaxy.role
       - marathon_lb_role:
-          file: indigo-dc.marathon-lb,deep-dev
+          file: indigo-dc.marathon-lb
           type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
