--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -825,6 +825,11 @@ node_types:
         description: Flag to specify that this ElasticCluster will work in a hybrid environment
         default: false
         required: false
+      powermanager_plugin:
+        type: string
+        description: Plugin that will manage the VMs (orchestrator or im)
+        default: orchestrator
+        required: false
     artifacts:
       docker_agent_role:
         file: indigo-dc.clues
@@ -845,6 +850,7 @@ node_types:
             clues_marathon_credentials: { get_property: [ SELF, marathon_credentials] }
             clues_chronos_credentials: { get_property: [ SELF, chronos_credentials] }
             clues_mesos_credentials: { get_property: [ SELF, mesos_credentials] }
+            clues_powermanager_plugin: { get_property: [ SELF, powermanager_plugin] }
     requirements:
       - wn:
           capability: tosca.capabilities.Scalable
