Add suport for clues_powermanager_plugin

--- a/artifacts/ec3/ec3_install.yml
+++ b/artifacts/ec3/ec3_install.yml
@@ -4,3 +4,4 @@
   roles:
   - role: indigo-dc.clues
     indigo_orchestrator_url: "{{ orchestrator_url }}"
+    clues_powermanager_class: cluesplugins."{{ clues_powermanager_plugin }}"
