--- a/artifacts/mesos/mesos_lb_install.yml
+++ b/artifacts/mesos/mesos_lb_install.yml
@@ -8,7 +8,7 @@
         marathon_lb_marathon_url: "https://{{ master_ips[0]  }}:8443"
         marathon_lb_service_discovery: "none" 
       when: (enable_consul_sd == false)
-
+  tasks:
     - role: indigo-dc.consul
       consul_mode: "agent"
       consul_servers: "{{ master_ips }}"
