Fixing roles section

--- a/artifacts/mesos/mesos_slave_install.yml
+++ b/artifacts/mesos/mesos_slave_install.yml
@@ -4,7 +4,7 @@
   vars:
     docker_bridge_ip_cidr: "172.0.17.1/24"
   
-
+  roles:
     - role: indigo-dc.consul
       consul_mode: "agent"
       consul_servers: "{{ mesos_masters_list_ips }}"
