--- a/examples/cellar_webapp_mysql.yaml
+++ b/examples/cellar_webapp_mysql.yaml
@@ -1,7 +1,7 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
 
 imports:
-  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/custom_types.yaml
+  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/stable/v3.0/custom_types.yaml
 
 description: >
   TOSCA test for launching the Wine Cellar Application (PHP Version)
@@ -24,7 +24,7 @@ topology_template:
       default: mypass
     download_url:
       type: string
-      default: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/webapps/cellar-webapp-sql.tgz
+      default: https://raw.githubusercontent.com/indigo-dc/tosca-types/stable/v3.0/artifacts/webapps/cellar-webapp-sql.tgz
       
   node_templates:
   
@@ -36,7 +36,7 @@ topology_template:
       interfaces:
         Standard:
           configure: 
-            implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/webapps/cellar-mysql.yml
+            implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/stable/v3.0/artifacts/webapps/cellar-mysql.yml
             inputs:
               download_url: { get_input: download_url }
               db_host: { get_attribute: [ db_server, private_address ] }
@@ -83,7 +83,7 @@ topology_template:
         root_password: { get_input: mysql_root_password }
       artifacts:
         db_content:
-          file: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/webapps/cellar.sql
+          file: https://raw.githubusercontent.com/indigo-dc/tosca-types/stable/v3.0/artifacts/webapps/cellar.sql
           type: tosca.artifacts.File
       requirements:
         - host:
@@ -91,7 +91,7 @@ topology_template:
       interfaces:
         Standard:
           configure:
-            implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/mysql/mysql_db_import.yml
+            implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/stable/v3.0/artifacts/mysql/mysql_db_import.yml
             inputs:
               db_name: { get_property: [ SELF, name ] }
               db_data: { get_artifact: [ SELF, db_content ] }
