--- a/artifacts/galaxy/galaxy_redfata_configure.yml
+++ b/artifacts/galaxy/galaxy_redfata_configure.yml
@@ -10,12 +10,12 @@
         url: 'https://raw.githubusercontent.com/indigo-dc/Reference-data-galaxycloud-repository/master/cvmfs_server_keys/{{ refdata_cvmfs_key_file }}'
         dest: '/tmp'
       when: refdata_provider_type == 'cvmfs'
-    - name: Get reference data cvmfs keu for preconfigured repository
+    - name: Get reference data cvmfs key for preconfigured repository
       get_url:
         url: 'https://raw.githubusercontent.com/indigo-dc/Reference-data-galaxycloud-repository/master/cvmfs_server_keys/{{ refdata_cvmfs_repository_name }}.pub'
         dest: '/tmp'
       when: refdata_provider_type == 'cvmfs_preconfigured'
-    - name: Get reference data cvmfs configuration for preconfigured erence data cvmfs configuration for preconfigured repositoryy
+    - name: Get reference data cvmfs configuration for preconfigured repository
       get_url:
         url: 'https://raw.githubusercontent.com/indigo-dc/Reference-data-galaxycloud-repository/master/cvmfs_server_config_files/{{ refdata_cvmfs_repository_name }}.conf'
         dest: '/tmp'
