Add missing req

--- a/examples/vrouter_example.yaml
+++ b/examples/vrouter_example.yaml
@@ -38,6 +38,8 @@ topology_template:
       requirements:
         - central_point:
             node: indigovr_cp
+        - host:
+            node: server2
 
     server2:
       type: tosca.nodes.indigo.Compute
