--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -838,12 +838,12 @@ node_types:
         required: false
     artifacts:
       docker_agent_role:
-        file: indigo-dc.clues
+        file: indigo-dc.clues,clues_powermanager_plugin
         type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
         create:
-          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/ec3/ec3_install.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/clues_powermanager_plugin/artifacts/ec3/ec3_install.yml
           inputs:
             clues_secret_token: { get_property: [ SELF, secret_token ] }
             clues_queue_system: { get_property: [ SELF, lrms, type ] }
