fix yaml to yml

--- a/artifacts/XCache/XCache.yml
+++ b/artifacts/XCache/XCache.yml
@@ -6,13 +6,13 @@
   - name: Download marathon deployment 
     get_url:
       url: https://raw.githubusercontent.com/indigo-dc/tosca-types/dciangot/artifacts/XCache/marathon.yml
-      dest: /etc/deployment.yaml
+      dest: /etc/deployment.yml
     when: (orchestrator is undefined) or (orchestrator == "marathon")
 
   - name: Download marathon deployment 
     get_url:
       url: https://raw.githubusercontent.com/indigo-dc/tosca-types/dciangot/artifacts/XCache/k8s.yml
-      dest: /etc/deployment.yaml
+      dest: /etc/deployment.yml
     when: (orchestrator == "k8s")
 
-  - include: deployment.yml
+  - include: /etc/deployment.yml
