--- a/artifacts/XCache/XCache.yml
+++ b/artifacts/XCache/XCache.yml
@@ -2,17 +2,5 @@
 ---
 - hosts: localhost
   connection: local
-  tasks:
-  - name: Download marathon deployment 
-    get_url:
-      url: https://raw.githubusercontent.com/indigo-dc/tosca-types/dciangot/artifacts/XCache/marathon.yml
-      dest: /etc/deployment.yml
-    when: (orchestrator is undefined) or (orchestrator == "marathon")
-
-  - name: Download marathon deployment 
-    get_url:
-      url: https://raw.githubusercontent.com/indigo-dc/tosca-types/dciangot/artifacts/XCache/k8s.yml
-      dest: /etc/deployment.yml
-    when: (orchestrator == "k8s")
-
-  - include: /etc/deployment.yml
+  roles:
+    - role: dciangot.xcache
