--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1300,6 +1300,52 @@ node_types:
   tosca.nodes.indigo.MesosMaster:
     derived_from: tosca.nodes.indigo.LRMS.FrontEnd.Mesos
 
+  tosca.nodes.indigo.XCache:
+    derived_from: tosca.nodes.SoftwareComponent
+    properties:
+      master_ip:
+        type: string
+        required: yes
+      orchestrator:
+        type: string
+        required: yes
+      redirector_ip:
+        type: string
+        required: no
+        default: 'ONLY NEEDED FOR MARATHON'
+      marathon_username:
+        type: string
+        required: no
+        default: 'Marathon-user'
+      marathon_password:
+        type: string
+        required: no
+        default: 'Marathon-passwd'
+      marathon_protocol:
+        type: string
+        required: no
+        default: 'http'
+      marathon_port:
+        type: integer
+        required: no
+        default: 8080
+    artifacts:
+      cms_config_role:
+        file: indigo-dc.xcache
+        type: tosca.artifacts.AnsibleGalaxy.role
+    interfaces:
+      Standard:
+        start:
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/dodas_roll/artifacts/XCache/XCache.yml
+          inputs:
+            master_ip: { get_property: [ SELF, master_ip ] }
+            orchestrator: { get_property: [ SELF, orchestrator ] }
+            redirector_ip: { get_property: [ SELF, redirector_ip ] }
+            marathon_protocol: { get_property: [ SELF, marathon_protocol ] }
+            marathon_port: { get_property: [ SELF, marathon_port ] }
+            marathon_username: { get_property: [ SELF, marathon_username ] }
+            marathon_password: { get_property: [ SELF, marathon_password ] }
+
   tosca.nodes.indigo.CmsServices:
     derived_from: tosca.nodes.SoftwareComponent
     properties:
